--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: 'Noto Sans JP', sans-serif;
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 body {
@@ -99,4 +99,15 @@ button:active {
 
 .error-text {
   color: #b40e0e;
+}
+
+.form-disabled {
+  text-align: right;
+}
+
+.form-disabled button:hover {
+  background-color: #fb0000;
+  border: 1px solid #000000;
+  color: rgb(0, 0, 0);
+  cursor: not-allowed;
 }
